@@ -66,4 +66,15 @@
 
 [1  5  33]
 
+[[], []]
+[[-1], []]
+[[-1], [1/2]]
+[[-1, 1/3, 1/15, 1/35, 1/63, 1/99, 1/143, 1/195], [1/2, 1/36, 1/100, 1/196, 
+1/324, 1/484, 1/676, 1/900]]
+  ***   at top-level: contfraceval(e,1,10)
+  ***                 ^--------------------
+  *** contfraceval: non-existent component in contfraceval: index > 8
+410105312/150869313
+517656/190435
+410105312/150869313
 Total time spent: 0
